feat: 完善预约系统功能和UI设计规范
- 新增订单确认页面
- 优化购物车和档期管理逻辑
- 更新预约规则和套餐管理
- 完善订单变更功能
- 添加AI开发规范和UI设计指南
- 集成ui-ux-pro-max设计系统

--- a/doc/功能设计汇总.md
+++ b/doc/功能设计汇总.md
@@ -63,22 +63,79 @@
 
 ---
 
-## 四、核心业务流程
+## 四、核心业务系统设计
 
-### 4.1 预约流程
-```
-浏览人员 → 查看档期 → 加入购物车 → 填写信息 → 
-提交订单 → 工作人员确认 → 用户支付 → 服务完成 → 评价
-```
+### 4.1 业务目标与边界
+- 以“预约 → 确认 → 支付 → 履约 → 评价”为最小闭环，确保全链路可追踪
+- 档期与价格在下单时冻结，降低改价/超卖引发的纠纷
+- 支持多人员组合预约与档期共享，保证跨人员一致性
 
-### 4.2 订单状态流转
+### 4.2 领域对象与关系
+| 对象 | 说明 | 关键关系 |
+| --- | --- | --- |
+| 用户 | 预约与支付主体 | 关联订单、支付、评价 |
+| 工作人员 | 服务提供者 | 关联档期、订单项、服务履约 |
+| 档期 | 可预约时间段 | 被订单项锁定/释放 |
+| 购物车/方案 | 组合选择容器 | 生成订单 |
+| 订单 | 交易主实体 | 关联支付、履约、评价 |
+| 支付 | 支付流水 | 关联订单、支付方式 |
+| 线下凭证 | 线下支付凭证 | 关联订单、审核状态 |
+| 服务履约 | 服务节点与进度 | 影响订单状态流转 |
+| 评价 | 服务反馈 | 影响人员评分与口碑 |
+
+### 4.3 预约主流程（按阶段拆解）
+1. 浏览人员/查看档期：展示可预约日期与价格区间
+2. 加入购物车：进行基础档期冲突检查
+3. 填写信息：采集婚期、地点、需求与联系人信息
+4. 提交订单：生成订单（待确认）并锁定档期
+5. 工作人员确认：同意进入待支付，拒绝则释放档期并取消订单
+6. 用户支付：线上支付或提交线下凭证
+7. 服务履约：支付成功进入服务中，履约完成转已完成
+8. 订单评价：完成评价后进入已评价并归档
+
+### 4.4 订单状态机（主链路 + 异常支路）
+**主链路**
 ```
 待确认 → 待支付 → 已支付 → 服务中 → 已完成 → 已评价
 ```
 
-### 4.3 支付方式
-- 线上支付：微信支付、余额支付、组合支付
-- 线下支付：用户上传凭证 → 管理员审核 → 确认收款
+**异常支路**
+- 待确认：工作人员拒绝/超时未处理 → 已取消
+- 待支付：支付超时/用户取消 → 已取消
+- 已支付：改期/暂停/退款申请 → 已暂停/退款流程
+- 服务中：异常中止 → 已暂停/售后处理
+
+### 4.5 支付体系设计（线上 + 线下）
+- 线上支付（微信/余额/组合）
+  - 发起支付：校验订单状态=待支付，创建支付流水并冻结价格
+  - 支付回调：更新订单为已支付，记录 pay_way 与 pay_time
+  - 组合支付：余额优先抵扣，剩余金额走微信支付，保持原子更新
+- 线下支付
+  - 用户上传凭证 → 管理员审核 → 通过后标记已支付
+  - 审核拒绝：退回待支付并提示重新上传
+- 超时与退款
+  - 待支付超时自动取消并释放档期
+  - 退款需按原支付方式处理（线上原路退、线下凭证留痕）
+
+### 4.6 角色职责与权限
+- 用户：选人选期、下单、支付/上传凭证、变更申请、评价
+- 工作人员：确认/拒绝订单、维护档期、更新履约进度
+- 管理员：审核线下凭证、处理退款/异常、监控订单闭环
+
+### 4.7 关键规则与风控
+- 档期冲突校验：购物车与下单阶段双重校验
+- 档期锁定：下单即锁，取消/超时/拒绝即释放
+- 价格冻结：下单后价格与优惠不再变动
+- 组合预约一致性：多人员订单需全员可用，否则提示替代方案
+- 凭证审核留痕：线下凭证与审核记录可追溯
+
+### 4.8 事件与通知
+- 订单提交：通知工作人员确认
+- 订单确认：通知用户支付
+- 支付成功：通知用户/工作人员/管理员
+- 服务前提醒：婚期前多节点提醒
+- 服务完成：提醒用户评价
+- 凭证上传：通知管理员审核
 
 ---
 
